--- a/src/Components/Navbar/index.css
+++ b/src/Components/Navbar/index.css
@@ -1,10 +1,29 @@
-.navbar-container{
-    display: flex;
-}
 
-.nav-logo {
-    width: 20px;
-    height: auto;
-    margin-left: 20px;
-}
 
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+    .navbar-container{
+        display: flex;
+    }
+    
+    .nav-logo {
+        width: 20px;
+        height: auto;
+        margin-left: 20px;
+    }
+} 
+
+@media only screen and (max-width: 768px) {
+
+    .navbar-container{
+        display: flex;
+        text-align: left;
+    }
+    
+    .nav-logo {
+        width: 20px;
+        height: auto;
+        margin-left: 20px;
+    }
+}
