--- a/src/Components/Skills/index.css
+++ b/src/Components/Skills/index.css
@@ -1,50 +1,62 @@
-.skills-outer-container {
-    z-index: 2;
-    position: absolute;
-    /* left: 25vw; */
-    top: 100vh;
-    align-self: center;
-    width: 100%;
-
-    background-color: white;
-    opacity: 0.8;
-}
-
-.skills-container {
-    /* display: grid;
-    grid-template: 1fr / 1fr 1fr 1fr 1fr 1fr;
-    grid-gap: 1em; */
-    display: flex;
-    justify-content: space-around;
-    margin: 1em;
-    width: 100%;
-}
-
-.skills-container :hover {
-    background-color: blue;
-    color: white;
-    cursor: pointer;
-  
-
-}
-
-.skill-item {
-    font-weight: bold;
-    font-size: 2em;
-    color: blue;
-    padding: 1em;
-    border-radius: 50%;
-    background-color: white;
-    opacity: 0.8;
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
     
-    display: flex;
-    flex-direction: column;
+    .skills-outer-container {
+        z-index: 2;
+        position: absolute;
+        /* left: 25vw; */
+        top: 100vh;
+        align-self: center;
+        width: 100%;
+
+        background-color: white;
+        opacity: 0.8;
+    }
+
+    .skills-container {
+        /* display: grid;
+        grid-template: 1fr / 1fr 1fr 1fr 1fr 1fr;
+        grid-gap: 1em; */
+        display: flex;
+        justify-content: space-around;
+        margin: 1em;
+        width: 100%;
+    }
+
+    .skills-container :hover {
+        background-color: blue;
+        color: white;
+        cursor: pointer;
+    
+
+    }
+
+    .skill-item {
+        font-weight: bold;
+        font-size: 2em;
+        color: blue;
+        padding: 1em;
+        border-radius: 50%;
+        background-color: white;
+        opacity: 0.8;
+        
+        display: flex;
+        flex-direction: column;
+    }
+
+
+
+    .logo {
+        height: auto;
+        width: 100px;
+        align-self: center;
+    }
 }
 
+@media only screen and (max-width: 768px) {
 
+    .skills-outer-container {
+        display: none;
+    }
 
-.logo {
-    height: auto;
-    width: 100px;
-    align-self: center;
 }
