Added CV to links

--- a/src/Components/Footer/index.css
+++ b/src/Components/Footer/index.css
@@ -44,6 +44,10 @@
         width: 250px;
         padding: 1em;
     }
+    .footer-item a{
+        color: #3F51B5;
+        text-decoration: inherit;
+    }
 
     .footer-item :hover{
         cursor: pointer;
