--- a/src/Components/Skills/index.css
+++ b/src/Components/Skills/index.css
@@ -1,56 +1,80 @@
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
     
-    .skills-outer-container {
-        z-index: 2;
-        position: absolute;
-        /* left: 25vw; */
-        top: 100vh;
+    .skills-container {
+        display: flex;
         align-self: center;
         width: 100%;
-
         background-color: white;
         opacity: 0.8;
-    }
-
-    .skills-container {
-        /* display: grid;
-        grid-template: 1fr / 1fr 1fr 1fr 1fr 1fr;
-        grid-gap: 1em; */
-        display: flex;
         justify-content: space-around;
-        margin: 1em;
-        width: 100%;
-    }
-
-    .skills-container :hover {
-        background-color: blue;
-        color: white;
-        
-    
-
+        flex-direction: row;
+        border-bottom: black 1px solid;
     }
 
     .skill-item {
         font-weight: bold;
-        font-size: 2em;
-        color: blue;
-        padding: 1em;
-        border-radius: 50%;
-        background-color: white;
-        opacity: 0.8;
-        
+        font-size: 1em;
+        color: black;
+        background-color: transparent;
         display: flex;
         flex-direction: column;
     }
-
-
 
     .logo {
         height: auto;
         width: 100px;
         align-self: center;
+        justify-self: center;
+        padding-top: 1rem;
     }
+
+    .flip-card {
+        background-color: transparent;
+        width: 100px;
+        height: 150px;
+        perspective: 1000px; /* Remove this if you don't want the 3D effect */
+    }
+
+    /* This container is needed to position the front and back side */
+    .flip-card-inner {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: transform 0.8s;
+        transform-style: preserve-3d;
+    }
+
+    /* Do an horizontal flip when you move the mouse over the flip box container */
+    .flip-card:hover .flip-card-inner {
+        transform: rotateY(180deg);
+    }
+
+    /* Position the front and back side */
+    .flip-card-front, .flip-card-back {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        -webkit-backface-visibility: hidden; /* Safari */
+        backface-visibility: hidden;
+    }
+
+    /* Style the front side (fallback if image is missing) */
+    .flip-card-front {
+        background-color: white;
+        color: black;
+    }
+
+    /* Style the back side */
+    .flip-card-back {
+        background-color: white;
+        color: black;
+        transform: rotateY(180deg);
+    }
+
+
+
 }
 
 @media only screen and (max-width: 768px) {
