--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
   width: 100%;
+  height: 100%;
+  margin: 0;
+  top: 0;
 }
 
 /* @media only screen and (max-width: 768px) {
