--- a/src/Components/Skills/index.css
+++ b/src/Components/Skills/index.css
@@ -6,10 +6,11 @@
         align-self: center;
         width: 100%;
         background-color: white;
-        opacity: 0.8;
         justify-content: space-around;
         flex-direction: row;
         border-bottom: black 1px solid;
+        padding: 10px;
+        padding-bottom: 20px;
     }
 
     .skill-item {
@@ -18,7 +19,8 @@
         color: black;
         background-color: transparent;
         display: flex;
-        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 
     .logo {
@@ -28,53 +30,6 @@
         justify-self: center;
         padding-top: 1rem;
     }
-
-    .flip-card {
-        background-color: transparent;
-        width: 100px;
-        height: 150px;
-        perspective: 1000px; /* Remove this if you don't want the 3D effect */
-    }
-
-    /* This container is needed to position the front and back side */
-    .flip-card-inner {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        text-align: center;
-        transition: transform 0.8s;
-        transform-style: preserve-3d;
-    }
-
-    /* Do an horizontal flip when you move the mouse over the flip box container */
-    .flip-card:hover .flip-card-inner {
-        transform: rotateY(180deg);
-    }
-
-    /* Position the front and back side */
-    .flip-card-front, .flip-card-back {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        -webkit-backface-visibility: hidden; /* Safari */
-        backface-visibility: hidden;
-    }
-
-    /* Style the front side (fallback if image is missing) */
-    .flip-card-front {
-        background-color: white;
-        color: black;
-    }
-
-    /* Style the back side */
-    .flip-card-back {
-        background-color: white;
-        color: black;
-        transform: rotateY(180deg);
-    }
-
-
-
 }
 
 @media only screen and (max-width: 768px) {
