--- a/src/Components/Hero/index.css
+++ b/src/Components/Hero/index.css
@@ -13,6 +13,15 @@
         justify-content: center;
         align-self: center;
     }
+    .button-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        padding-bottom: 15%;
+    }
     .header-text {
         font-size: 3em;
         color: black;
@@ -36,6 +45,7 @@
         background-color: black;
         border-radius: 5px;
         border: white 1px solid;
+        margin-bottom: 20px;
     }
     .download-cv-badge-text {
         color: white;
