--- a/src/Components/Projects/index.css
+++ b/src/Components/Projects/index.css
@@ -93,6 +93,14 @@
     .google-play-badge-container {
         padding-top: 10px;
     }
+
+    .tech-stack-container {
+        display: flex;
+        flex-direction: row;
+    }
+    .tech-stack-item {
+        padding-right: 2em;
+    }
 }
 
 @media only screen and (max-width: 768px) {
