--- a/src/Components/Skills/index.css
+++ b/src/Components/Skills/index.css
@@ -8,7 +8,7 @@
         background-color: white;
         justify-content: space-around;
         flex-direction: row;
-        border-bottom: black 1px solid;
+        /*border-bottom: black 1px solid;*/
         padding-bottom: 20px;
     }
 
