--- a/src/Components/Footer/index.css
+++ b/src/Components/Footer/index.css
@@ -1,247 +1,55 @@
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-
-
-    .background-image {
-        opacity: 0.6;
-        height: auto; 
-        width: 100%;    
-
-        
-    }
-
-    .img-container {
-        height: 580px; 
-        width: 100%;
-        overflow: hidden;
-    }
-
     .footer-container {
-    
-        width: 100%;
-        position: absolute;
-        top: 190vh;
-        padding-top: 15em;
-    }
-
-    .footer-container a {
-        text-decoration: inherit;
-    }
-
-
-    .footer-items-container {
         display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        
-    }
-
-    .footer-item {
-        background-color: white;
-        color: #3F51B5;
-        border-radius: 50%;
-        height: 250px;
-        width: 250px;
-        padding: 1em;
-    }
-    .footer-item a{
-        color: #3F51B5;
-        text-decoration: inherit;
-    }
-
-    .footer-item :hover{
-        cursor: pointer;
-    
-        
-    }
-
-    .logo {
-        height: auto;
-        width: 100px;
-    }
-
-    .footer-react-attr {
-        height: 70px;
-        margin-top: 5em;
-        background-color: #3F51B5;
-        color: white;
-        display: flex;
-        flex-basis: flex-end;   
-        flex-direction: row;
+        flex-direction: column;
+        height: 100px;
+        align-items: center;
         justify-content: center;
-        align-content: flex-end;
-    
-
     }
-    .react-logo{
+    .footer-react-container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        padding: 1em 0;
+    }
+    .footer-icon-react {
         height: auto;
-        width: 100px;
+        width: 2em;
+    }
+    .footer-icon-container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        padding-bottom: 1em;
+    }
+    .cv-circle {
+        display: flex;
+        border-radius: 100px;
+        width: 1em;
+        height: 1em;
+        padding: 0.5em;
+        margin: 0 1em;
+        align-items: center;
+        justify-content: center;
+    }
+    .dark-cv-icon {
+        border: black 2px solid;
+        color: black;
+    }
+    .light-cv-icon {
+        border: white 2px solid;
+        color: white;
     }
 }
 
 @media only screen and (max-width: 767px) {
 
-    .background-image {
-        opacity: 0.5;
-        width: auto;    
-        height: 500px; 
- 
-        position: relative;
-        left: -200px;
-        
-    }
-
-    .img-container {
-        
-        overflow: hidden;
-    }
-
-    .footer-container {
-        width: 100%;
-        position: absolute;
-        top: 225vh;
-        padding-top: 15em;
-    }
-
-    .footer-container a {
-        text-decoration: inherit;
-    }
-    .footer-container h2 {
-        color: #3F51B5;
-    }
-
-
-    .footer-items-container {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        
-    }
-
-    .footer-item {
-        text-decoration: inherit;
-        color: #3F51B5;
-        width: 100%;
-        padding: 1em;
-    }
-
-    .footer-item :hover{
-        cursor: pointer;
-    
-        
-    }
-
-    .logo {
-        height: auto;
-        width: 100%;
-        background-color: white;
-        opacity: 0.8;
-        border-radius: 50%;
-        width: 100%;
-    }
-
-    .footer-react-attr {
-        margin-top: 5em;
-        background-color: #3F51B5;
-        color: white;
-        display: flex;
-        flex-basis: flex-end;   
-        flex-direction: row;
-        justify-content: center;
-        align-content: flex-end;
-    
-
-    }
-
-    .react-logo {
-        width: auto;
-        height: 50px;
-        justify-self: center;
-    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) { 
 
-    .background-image {
-        opacity: 0.5;
-        width: auto;    
-        height: 600px; 
-        position: relative;
-        left: -100px;
-        
-    }
 
-    .img-container {
-        overflow: hidden;
-    }
-
-    .footer-container {
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        top: 1000px;
-    }
-
-    .footer-container a {
-        text-decoration: inherit;
-    }
-    .footer-container h2 {
-        color: #3F51B5;
-    }
-
-    .footer-container h1{
-        position: absolute;
-        bottom: 700px;
-        left: 250px;
-    }
-
-    .footer-items-container {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        position: absolute;
-        bottom: 450px;
-    }
-
-    .footer-item {
-        text-decoration: inherit;
-        color: #3F51B5;
-        width: 100%;
-        padding: 1em;
-    }
-
-    .footer-item :hover{
-        cursor: pointer;
-    
-        
-    }
-
-    .logo {
-        height: auto;
-        width: 50%;
-        background-color: white;
-        opacity: 0.8;
-        border-radius: 50%;
-     
-    }
-
-    .footer-react-attr {
-        margin-top: 5em;
-        background-color: #3F51B5;
-        color: white;
-        display: flex;
-        flex-basis: flex-end;   
-        flex-direction: row;
-        justify-content: center;
-        align-content: flex-end;
-        
-        margin-top: 650px;
-
-    }
-
-    .react-logo {
-        width: auto;
-        height: 50px;
-        justify-self: center;
-    }
 }
