--- a/src/Components/Hero/index.css
+++ b/src/Components/Hero/index.css
@@ -54,7 +54,7 @@
         justify-content: center;
     }
     .download-cv-badge-text {
-        color: black;
+        color: white;
         padding: 0 10px 0 10px;
     }
     .github-container {
