--- a/src/Components/Navbar/index.css
+++ b/src/Components/Navbar/index.css
@@ -23,8 +23,8 @@
     
     .icon {
         display: flex;
-        width: auto;
-        height: 100%;
+        width: 40px;
+        height: auto;
         align-self: flex-end;
         margin: 0 10px 0 10px;
     }
@@ -32,14 +32,58 @@
 
 @media only screen and (max-width: 768px) {
 
-    .navbar-container{
+    .container {
         display: flex;
-        text-align: left;
+        flex-direction: row;
+        align-items: flex-end;
+        height: 30px;
+        width: 100%;
+        justify-content: flex-end;
+        margin-top: 5px;
     }
-    
-    .nav-logo {
-        width: 20px;
+
+    .icon-container {
+        width: 100%;
+        height: 100%;
+        justify-content: space-evenly;
+        align-self: flex-end;
+        display: flex;
+    }
+
+    .icon {
+        display: flex;
+        width: 40px;
         height: auto;
-        margin-left: 20px;
+        align-self: flex-end;
+        margin: 0 10px 0 10px;
     }
+}
+
+@media screen and (min-width: 767px) and (max-width: 991px) {
+    .container {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-end;
+        height: 30px;
+        width: 100%;
+        justify-content: flex-end;
+        margin-top: 5px;
+    }
+
+    .icon-container {
+        width: 100%;
+        height: 100%;
+        justify-content: flex-end;
+        align-self: flex-end;
+        display: flex;
+    }
+
+    .icon {
+        display: flex;
+        width: 40px;
+        height: auto;
+        align-self: flex-end;
+        margin: 0 10px 0 10px;
+    }
+
 }
