Fix styling for smaller screens

--- a/src/Components/Footer/index.css
+++ b/src/Components/Footer/index.css
@@ -52,6 +52,7 @@
         height: 100px;
         align-items: center;
         justify-content: center;
+        background-color: white;
     }
     .footer-react-container {
         display: flex;
@@ -98,6 +99,7 @@
         height: 100px;
         align-items: center;
         justify-content: center;
+        background-color: white;
     }
     .footer-react-container {
         display: flex;
