--- a/src/Components/Hero/index.css
+++ b/src/Components/Hero/index.css
@@ -7,6 +7,7 @@
         height: 100vh;
         width: auto;
         background-size: cover;
+        background-position-x: center;
         flex-direction: column;
     }
 
@@ -78,6 +79,7 @@
         width: auto;
         background-size: cover;
         flex-direction: column;
+        background-position-x: center;
     }
 
     .header-text-container {
