Move github logo

--- a/src/Components/Projects/index.css
+++ b/src/Components/Projects/index.css
@@ -88,7 +88,7 @@
     .tech-stack-container {
         display: flex;
         flex-direction: row;
-        justify-content: flex-start;
+        justify-content: space-evenly;
     }
     .tech-stack-item {
         padding-right: 2em;
