Add a margin to bottom project

--- a/src/Components/Projects/index.css
+++ b/src/Components/Projects/index.css
@@ -195,6 +195,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        margin-bottom: 20px;
     }
     .github-container {
         justify-content: center;
