--- a/src/Components/Projects/index.css
+++ b/src/Components/Projects/index.css
@@ -24,7 +24,6 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-
     }
     .white-background {
         background-color: white;
@@ -35,7 +34,6 @@
     .project-item h1 {
         text-align: left;
     }
-
     .project-image-container {
         height: 100%;
         display: flex;
@@ -56,9 +54,10 @@
     }
 
     .project-one-description-container {
-        text-align: justify;
+        padding-left: 20px;
     }
     .project-two-description-container {
+        padding-right: 20px;
     }
 
     .project-item :hover{
@@ -89,6 +88,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
+        padding-bottom: 50px;
     }
     .tech-stack-item {
         padding-right: 2em;
@@ -98,6 +98,19 @@
         flex-direction: column;
         align-items: center;
         padding-bottom: 2em;
+    }
+    .github-group-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        padding-top: 2em;
+    }
+    .github-container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
     }
 }
 
@@ -196,10 +209,20 @@
         justify-content: center;
         align-items: center;
         margin-bottom: 20px;
+        padding-bottom: 50px;
+    }
+    .github-group-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        padding-top: 2em;
     }
     .github-container {
-        justify-content: center;
-        flex-direction: column;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
     }
     .project-reverse {
         flex-direction: column-reverse;
@@ -311,10 +334,20 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        padding-bottom: 50px;
+    }
+    .github-group-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        padding-top: 2em;
     }
     .github-container {
-        justify-content: center;
-        flex-direction: column;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
     }
     .project-reverse {
         flex-direction: column-reverse;
